fixed player having a weird gap under the panel on different screen resolutions

--- a/css/panel.css
+++ b/css/panel.css
@@ -1,12 +1,13 @@
 .headerContainer{
   position: relative;
+  height: 52px;
 }
 
 .header{
   position: relative;
   z-index: 3;
-  height: clamp(46px, 7vh, 54px);
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background-color: white;
 
   display: flex;
